add id and history simplyfier

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "mongoose": "3.8.0",
     "sqlite3": "2.1.19", 
-    "async": "0.2.9"
+    "async": "0.2.9",
+    "hashids": "0.3.3"
   }
 }
