--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "3.8.0",
     "sqlite3": "2.1.19", 
     "async": "0.2.9",
-    "hashids": "0.3.3"
+    "hashids": "0.3.3",
+    "swig": "1.3.2"
   }
 }
