--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sqlite3": "2.1.19", 
     "async": "0.2.9",
     "hashids": "0.3.3",
-    "swig": "1.3.2"
+    "swig": "1.3.2",
+    "nodemailer": "0.6.3"
   }
 }
