--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.4.4",
     "jade": "*",
-    "mongoose": "3.8.0",
+    "mongoose": "*",
     "sqlite3": "2.1.19", 
     "async": "0.2.9",
     "hashids": "0.3.3",
