--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.4",
-    "jade": "*",
-    "mongoose": "*",
-    "sqlite3": "2.1.19", 
     "async": "0.2.9",
+    "express": "3.4.4",
     "hashids": "0.3.3",
-    "swig": "1.3.2",
-    "nodemailer": "0.6.3"
+    "jade": "*",
+    "moment": "^2.6.0",
+    "mongoose": "*",
+    "nodemailer": "0.6.3",
+    "sqlite3": "2.1.19"
   }
 }
